--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
   "name": "express-api-mongodb-customers",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests",
+    "build": "tsc /dist",
+    "start": "node dist/server.js",
+    "watch": "tsc -w",
+    "dev": "concurrently \"npm run watch\" \"nodemon dist/server.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/yamljs": "^0.2.34",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
-    "mongodb": "^6.12.0"
+    "mongodb": "^6.12.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
+    "@types/swagger-ui-express": "^4.1.7",
+    "concurrently": "^7.6.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.2"
   }
